feat: update color

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/wanling_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>万灵山庄DPS计算器</title>
+    <title>蓬莱DPS计算器</title>
     </script>
   </head>
   <body>
